mystyle.css
.Header
{
    font-family:'Mali';
    text-align: center;
    font-size: 28px;
}
.video
{
    justify-content: center;
    align-items: center;
    display: flex;
    margin-top: 20px;
    cursor: pointer;
}
.details
{
    font-family: Mali;
    font-size: 14px;
  padding: 20px 4px;
}
.head{
    font-weight: bold;
    cursor: pointer;
    border: 1px solid;
    border-radius: 5px;
    display: inline-block;
    padding: 2px 4px;
}
*
{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.navbar
{
    background-color: #333;
    color: #fff;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem ;
}
.menu
{
    display: flex;
    padding: 12px;
    list-style: none;
    justify-content: center;
    gap: 50px;
a{
    color:#fff;
    text-decoration: none;
    font-family: Mali;
}
li{
    margin:15px;
}
}
.navbar
{
    background: rgba(255, 255, 255, 0,95);
    backdrop-filter: blur(10px);
    padding: 15px;
    box-shadow: 0 5px 10px rgba(0, 0,0, 1);
}

